[F] - created-mvp-frontend

--- a/flight-analyser-frontend/src/App.css
+++ b/flight-analyser-frontend/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.quotes-table {
+    border-collapse: collapse;
+    width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.quotes-table tr:first-child td {
+    font-weight: bold;
+    background-color: #BA3B46 !important;
+    border-top: none;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.quotes-table tr:nth-child(2n) td {
+    background-color: #61c9a8;
+}
+.quotes-table tr:nth-child(2n - 1) td {
+    background-color: #a4e0cd;
+;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quotes-table td {
+    text-align: center;
+    padding: 5px;
+    border-top: 1px solid black;
 }
