[FE][H] - fixed header color

--- a/flight-analyser-frontend/src/App.css
+++ b/flight-analyser-frontend/src/App.css
@@ -3,7 +3,7 @@
     width: 100%;
 }
 
-.quotes-table tr:first-child td {
+.quotes-table thead tr:first-child td {
     font-weight: bold;
     background-color: #BA3B46 !important;
     border-top: none;
